--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "async-utils",
   "version": "0.0.1",
   "description": "A set of utils for working with async code",
-  "main": "index.js",
+  "main": "async-utils.cjs",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -21,5 +21,9 @@
   "bugs": {
     "url": "https://github.com/slowpoison-node/async-utils/issues"
   },
-  "homepage": "https://github.com/slowpoison-node/async-utils#readme"
+  "homepage": "https://github.com/slowpoison-node/async-utils#readme",
+  "devDependencies": {
+    "mocha": "^10.2",
+    "chai": "^4.3"
+  }
 }
