--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "async-utils",
+  "name": "@slowpoison/async-utils",
   "version": "0.0.1",
   "description": "A set of utils for working with async code",
   "main": "async-utils.cjs",
