--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "description": "A set of utils for working with async code",
   "main": "async-utils.cjs",
+  "access": "public",
   "scripts": {
     "test": "mocha"
   },
