--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "@slowpoison/async-utils",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "A set of utils for working with async code",
   "main": "index.cjs",
   "access": "public",
+  "types": "index.d.ts",
   "scripts": {
     "test": "mocha"
   },
